--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Seminario3PM</string>
+
+    <string-array name="iconos">
+        <item>Elija una opcion</item>
+        <item>Caballo</item>
+        <item>Niño</item>
+    </string-array>
+
+    <string-array name="fotos">
+        <item>Elija una opcion</item>
+        <item>Pakirrin</item>
+        <item>Nose</item>
+    </string-array>
+
 </resources>
